делал checbox,немного отредактировал поля и сделал сохранение после F5

--- a/css/main.css
+++ b/css/main.css
@@ -109,3 +109,11 @@ button:hover {
 
     background-color: #8B0000;
 }
+
+.name_task {
+    white-space: pre-line;
+    word-break: break-all;
+    overflow-wrap: break-word;
+    width: 100%;
+    max-width: 200px; /* Ограничиваем ширину поля */
+}
