доделал все условности, вроде)

--- a/css/main.css
+++ b/css/main.css
@@ -117,3 +117,8 @@ button:hover {
     width: 100%;
     max-width: 200px; /* Ограничиваем ширину поля */
 }
+
+.column.inactive {
+    pointer-events: none; /* Запрет на взаимодействие с элементами в колонке */
+    opacity: 0.5; /* Понижаем прозрачность для визуального отображения неактивности */
+}
